bug(UI): Aligned headers and refactored UI
Edited profile page of User and removed transitions

[finishes #166030713]

--- a/UI/css/adminDashboard.css
+++ b/UI/css/adminDashboard.css
@@ -92,6 +92,10 @@ footer>a {
     margin-bottom: 30px;
 }
 #titleOfPage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
     width: 300px;
     height: 100%;
 }
