--- a/UI/css/userDashbord.css
+++ b/UI/css/userDashbord.css
@@ -151,13 +151,22 @@ footer > a {
     margin-bottom: 30px;
 }
 #titleOfPage{
-    width: 300px;
-    height: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    font-size: 20px;
+    width: 600px;
+    height: 90%;
+}
+#titleOfPage > p{
+   margin: 0px;
 }
 #firstHead{
     box-sizing: border-box;
     display: flex;
     padding-left: 20px;
+    padding: 5px;
     text-align: center;
     align-items: center;
     justify-content: center;
