--- a/UI/css/userLoan.css
+++ b/UI/css/userLoan.css
@@ -174,6 +174,10 @@ footer{
     margin-bottom: 30px;
 }
 #titleOfPage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
     width: 300px;
     height: 100%;
 }
