--- a/UI/css/userProfile.css
+++ b/UI/css/userProfile.css
@@ -141,6 +141,10 @@ footer > a {
     margin-bottom: 30px;
 }
 #titleOfPage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
     width: 300px;
     height: 100%;
 }
@@ -148,7 +152,7 @@ footer > a {
     box-sizing: border-box;
     display: flex;
     text-align: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-basis: 60%;
     padding-left: 20px;
     align-items: center;
@@ -251,6 +255,7 @@ footer > a {
        
     }
 }
+
 @media(max-width: 1000px){
     #navHead {
         display: none;
@@ -341,6 +346,10 @@ footer > a {
 #updateContent{
     box-sizing: border-box;
     width: 95%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     margin: auto;
 }
 .update{
@@ -355,6 +364,8 @@ footer > a {
     background-color: orange;
     outline: 0;
     border: 0;
+    padding: 10px;
+    margin-top: 20px;
     width: 100px;
     cursor: pointer;
     color: #ECEEE8;
@@ -365,17 +376,15 @@ footer > a {
     box-shadow: 2px 4px 8px 2px rgba(0, 0, 0, 0.2);
 }
 .updateForm>input{
-    display: block;
-    flex-basis: 68%;
+    display: inline-block;
+    width: 80%;
     height: 35px;
     outline: 0;
     border: 0;
     border: 2px solid grey;
-    padding-left: 5px;
     border-radius: 3px;
-    font-size: 18px;
+    padding-left: 5px;
     box-sizing: border-box;
-    transition: 1s ease;
     background-color: transparent;
 }
 .updateForm>input~button{
@@ -383,14 +392,15 @@ footer > a {
 }
 .updateForm>input+label{
     position: absolute;
-    left: 5px;
+    left: 100px;
     top: 10px;
-    transition: 1s ease;
+  
 }
 .updateForm>input:focus{
     border-color: indigo;
 }
 .updateForm>input:focus+label{
+    color: indigo;
     top: -9px;
     background-color: rgb(231, 224, 231);
 }
@@ -401,8 +411,9 @@ footer > a {
 }
 .updateForm{
     position: relative;
-    flex-basis: 45%;
-    display: flex;
+    display: block;
+    width: 50%;
+    text-align: center;
     justify-content: space-between;
 }
 #profilePicture{
@@ -460,15 +471,13 @@ footer > a {
    
 }
 #profileInfo>div{
-    display: flex;
     margin-bottom: 10px;
     justify-content: space-around;
+    text-align: center;
+    font-size: 18px;
 }
 .userInfoTitle{
     box-sizing: border-box;
-    flex-basis: 50%;
-    display: flex;
-    justify-content: flex-end;
 }
 #updateUserDetails{
     border-bottom: 2px solid grey;
@@ -478,9 +487,7 @@ footer > a {
     color: #C0465D;
     display: block;
     box-sizing: border-box;
-   flex-basis: 50%;
    min-height: 20px;
-    max-width: 250px;
     word-wrap: break-word;
 }
 #updateHead{
@@ -502,9 +509,12 @@ footer > a {
 @media(max-width:767px){
     .update{
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
     }
     .updateForm{
         margin-bottom: 20px;
+        width: 90%;
     }
 }
 @media(max-width:390px){
@@ -527,10 +537,6 @@ footer > a {
     }
 }
 @media(max-width:454px){
-    #profileInfo>div{
-        flex-direction: column;
-
-    }
     .userInfoTitle{
         justify-content: center;
     }
